# music-visualizer

./: .gitattributes  .gitignore  CMakeLists.txt  Music Visualizer.sln  README.md  build.sh
.github/workflows/: cmake-windows-debug.yml  cmake-windows-release.yml
CMake/: config.h.in
GLFW Stuff/: GLFW Stuff.vcxproj  GLFW Stuff.vcxproj.filters  glad.c  main.cpp  objects.h  shaders.h  utils.h
GLFW Stuff/glad/: glad.h
GLFW Stuff/shaders/: fragment.txt  vertex.txt
Libraries/: CMakeLists.txt
Libraries/Aquila/: CMakeLists.txt
Libraries/Aquila/Include/aquila/: functions.h
Libraries/Aquila/Include/aquila/filter/: MelFilterBank.h
Libraries/Aquila/Include/aquila/source/: SignalSource.h
Libraries/Aquila/Include/aquila/transform/: Mfcc.h
Libraries/Aquila/Windows/Libraries/Release/: Aquila.lib
Libraries/GLAD/: CMakeLists.txt
Libraries/GLAD/Include/glad/: glad.h
Libraries/GLAD/Source/: glad.c
Libraries/GLFW/: CMakeLists.txt
Libraries/GLFW/Include/GLFW/: glfw3.h
Libraries/GLFW/Windows/Libraries/Debug/: glfw3.lib
Libraries/GLFW/Windows/Libraries/Release/: glfw3.lib
Libraries/SFML/: CMakeLists.txt
Libraries/SFML/Include/SFML/System/: String.hpp  Time.hpp  Vector2.hpp  Vector3.hpp
Libraries/SFML/Windows/Libraries/: sfml-main-d.lib  sfml-main.lib
Libraries/kissfft/: CMakeLists.txt
Libraries/kissfft/Windows/Libraries/: kissfft-int16_t.lib
Visualizer/: CMakeLists.txt
Visualizer/Include/: objects.h  settings.h  shaders.h  utils.h
Visualizer/Shaders/: fragment.txt
Visualizer/Source/: main.cpp
